# KrishiBot-main

./: README.md
EcoFarm/MBMC_Hackathon/: .gitignore  index.html  package-lock.json  package.json
EcoFarm/backend/: .cache.sqlite  .gitignore  chat_service.py  constants.py  main.py  model.ipynb  model.py  pyproject.toml  test.py
EcoFarm/backend/game_engine/: clock.py  engine.py
EcoFarm/docs/: architecture.md  backend-api.md  changelog.md  contributing.md  data.md  deploy.md  frontend.md  game-engine.md  index.md  tests.md  troubleshooting.md
EcoFarm/frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
KrishiBot/: .gitignore
KrishiBot/backend/: pyproject.toml
KrishiBot/backend/app/: __main__.py
KrishiBot/backend/app/core/: agri_constants.py  config.py
KrishiBot/backend/app/db/: models.py
KrishiBot/backend/app/models/: soil.py
KrishiBot/backend/app/router/: __init__.py  chat.py  disease.py
KrishiBot/backend/app/services/: agri_forecast.py
KrishiBot/backend/tests/: test_user.py
KrishiBot/frontend/: package-lock.json  package.json
backend/: check_imports.py  task_summary.md  test_result.txt
backend/app/: env.example
frontend/: env.example  package-lock.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: cta-section.tsx  hero-section.tsx  interactive-portrait.tsx  masonry-gallery-section.tsx  mission-section.tsx  smooth-scroll.tsx
frontend/dashboard/: DashboardContext.tsx  DashboardLayoutContent.tsx  README.md  index.html  package-lock.json  types.ts
frontend/lib/: api-service.ts  (+2 more)
(+98 files in other folders)
