[project]
name = "ecofarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "numpy>=2.2.6",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
